# betterburn

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.toml  config.yaml  docker-compose.yml  gunicorn_start  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ghcr-image.yml
bot/: config.py  main.py  my_secrets.py
bot/assets/leaderboard/: cmatrix.csv
bot/cogs/: fuzzy.py  guide.py  leaderboard.py  presence.py
bot/modules/: steamboards.py
cogs/: fuzzy.py  presence.py
docs/: leaderboard-api-contract.md
scripts/: create_rank_roles.py  discord.py
src/: bridge.py  config.py  constants.py  custom_logger.py  leaderboard_api.py  main.py  steamboard.py  test.py
src/api/: api.py  health.py  utils.py
src/bot/: bot.py
src/bot/cogs/: maid.py  roles.py
src/bot/views/: __init__.py
src/db/: database.py
src/db/auth/: utils.py
src/db/cache/: models.py  utils.py
src/db/discord/: models.py  utils.py
src/db/session/: models.py  utils.py
src/signals/: __init__.py
src/steamboard/: steamboard.py
tests/: test_api_auth.py  test_bridge.py  test_discord_utils.py  test_leaderboard_api.py  test_rank_utils.py  test_role_cog.py  test_steamboard_import.py
