[project]
name = "Betterburn"
version = "0.1.0"
description = "Rank verification automation bot"
dependencies = [
    "discord-py>=2.5.2",
    "fastapi>=0.115.12",
    "sqlalchemy>=2.0.41",
    "steamsignin>=1.1.1",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 120
